<resources>
    <string name="app_name">Comalat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="url">http://141.99.248.86:8089/direct/</string>
    <string name="help_url">"http://141.99.248.86:8089/portal/help/main"</string>
    <string name="message_of_the_day">Message Of The Day</string>
    <string name="motd">New COMALAT Language Training Courses available! Search for the Joinable Site in the Membership Area.</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_to_sakai">Welcome to Sakai</string>
    <string name="welcome_message">
        <![CDATA[Welcome to the Sakai Demo. The Demo configuration was created as a way to let you get an instance of Sakai up and running quickly and easily.
        For more information about installing a Sakai solution appropriate for production needs please read the readme files, and visit the Sakai website at
        <a href="http://www.sakaiproject.org">sakaiproject.org</a>, and the Sakai Developer\'s site at <a href="http://collab.sakaiproject.org">collab.sakaiproject.org</a>.]]>
    </string>
    <string name="about_sakai_title">About Sakai</string>
    <string name="about_sakai_message">
        <![CDATA[Sakai is a set of software tools designed to help instructors, researchers, and students create websites for collaboration. Using a web browser, users
        choose from a set of features to create a site that meets their needs.<br /><br />Here are some common uses of Sakai:<br /><ul><li>A researcher can create a website for
        collaboration on a project with colleagues.</li><li>An instructor can create a website that serves as an online discussion board for students to collaborate on an
        assignment.</li><li>A student can create a site for a study group or for extra curricular activities (depending on institutional policy).</li></ul><br />Sakai is a
        part of the <a href="http://www.apereo.org">Apereo Foundation</a> (www.apereo.org).<br /><br />An overview of Sakai can be found at
        <a href="http://www.sakaiproject.org">http://www.sakaiproject.org</a>. For more information, contact <a href="mailto:sakaicoordinator@apereo.org">the
        Sakai Community Coordinator</a>.]]>
    </string>
    <string name="features_title">Capabilities</string>
    <string name="features_capabilities">Sakai offers a variety of capabilities for use in course and project sites, including:</string>
    <string name="home_capabilities">View recent announcements, discussions, and chat activity</string>
    <string name="announcements_capabilities">Post current, time-critical information</string>
    <string name="assignments_capabilities">Post assignments and receive submissions online</string>
    <string name="basiclti">Basiclti</string>
    <string name="basiclti_capabilities">Launch and exchange information with externally-hosted tools</string>
    <string name="chat_room_capabilities">Participate in real-time, written conversations</string>
    <string name="drop_box_capabilities">Allow private file-sharing between instructors and students</string>
    <string name="entity_broker">Entity Broker</string>
    <string name="entity_broker_capabilities">Provides a set of RESTful APIs that support interoperability between Sakai tools.</string>
    <string name="email_archive_capabilities">Maintain an archive of all email sent to the worksite\'s email list</string>
    <string name="gradebook_capabilities">Compute and store grades</string>
    <string name="help_capabilities">Access help documentation</string>
    <string name="lessons_capabilities">
        Can organize the course by unit, module, week, topic, or any other grouping the instructor creates. Lessons leverages the power of other Sakai tools like Assignments,
        and Test and Quizzes.
    </string>
    <string name="membership_capabilities">Choose sites in which you would like to participate</string>
    <string name="messages_and_forums">Messages and\nForums</string>
    <string name="messages_and_forums_capabilities">Create discussion forums and communicate between site groups and users using internal mail.</string>
    <string name="news_capabilities">Display an RSS feed from an external site</string>
    <string name="podcasts_capabilities">View podcasts</string>
    <string name="polls_capabilities">Create site-based surveys and polls</string>
    <string name="portofolios">Portfolios</string>
    <string name="portofolios_capabilities">Supports portfolio-based activities with a suite of tools.</string>
    <string name="postem_capabilities">Provides functionality for uploading .csv formatted files to display feedback (e.g., comments, grades) to site participants.</string>
    <string name="preferences_capabilities">Set your personal preferences, such as time zone, tab order</string>
    <string name="profile_capabilities">Provides a Facebook-style interface for editing user profiles; includes Twitter integration</string>
    <string name="quartz_scheduler">Quartz\nScheduler</string>
    <string name="quartz_scheduler_capabilities">Schedule and run cron jobs</string>
    <string name="resources_capabilities">Add documents and URLs to your worksite</string>
    <string name="roster_capabilities">View list of site participants</string>
    <string name="calendar_capabilities">Keep track of important dates and deadlines on worksite calendar</string>
    <string name="search_capabilities">Provides search capabilities of Sakai content</string>
    <string name="section_info_capabilities">Manage sections or groups within a site</string>
    <string name="shortened_url_service">Shortened URL\nService</string>
    <string name="shortened_url_service_capabilities">
        A simple service that allows tools and services to shorten links to anything, either via the Java-based service or the Entity Provider.
    </string>
    <string name="signup_tool">Signup tool</string>
    <string name="signup_tool_capabilities">Schedule instructor and ta office hours, study groups, and review sessions.</string>
    <string name="site_info_capabilities">View worksite profile and participants list</string>
    <string name="site_stats">Site Stats</string>
    <string name="site_stats_capabilities">View site usage statistics</string>
    <string name="syllabus_capabilities">Create a worksite syllabus</string>
    <string name="test_quizzes_capabilities">Create, administer, and correct tests and quizzes online, and automatically feed the results to the Gradebook</string>
    <string name="web_content_capabilities">Include external website content in your worksite</string>
    <string name="wiki_capabilities">Collaboratively edit simple web pages</string>
    <string name="worksite_setup">Worksite Setup</string>
    <string name="worksite_setup_capabilities">Create and manage sites</string>
    <string name="webservices">Webservices</string>
    <string name="webservices_capabilities">Includes a rich collection of web services for system admins</string>
    <string name="acknowledgements_copyrights">
        <![CDATA[Copyright 2003&#8211;2014 The Apereo Foundation. All rights reserved.<br /><br />Sakai is licensed for use pursuant to the
        <a href="https://opensource.org/licenses/ecl2.php">Educational Community License v. 2.0</a>. Portions of Sakai are copyrighted by other parties, including the parties
        listed below. Please refer to the licenses directory for complete copyright and licensing information.]]>
    </string>
    <string name="welcome">Welcome</string>
    <string name="about">About</string>
    <string name="features">Features</string>
    <string name="site_browser">Site Browser</string>
    <string name="training">Training</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="help">Help</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="other">Other</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Overview</string>
    <string name="profile">Profile</string>
    <string name="membership">Membership</string>
    <string name="calendar">Calendar</string>
    <string name="resources">Resources</string>
    <string name="announcements">Announcements</string>
    <string name="preferences">Preferences</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="assignments">Assignments</string>
    <string name="char_room">Chat Room</string>
    <string name="comalat_guide">COMALAT Guide</string>
    <string name="contact_us">Contact Us</string>
    <string name="dropbox">Drop Box</string>
    <string name="email">Email</string>
    <string name="email_archive">Email Archive</string>
    <string name="external_tool">External Tool</string>
    <string name="forum">Forum</string>
    <string name="gradebook">Gradebook</string>
    <string name="lessons">Lessons</string>
    <string name="messages">Messages</string>
    <string name="news">News</string>
    <string name="podcasts">Podcasts</string>
    <string name="polls">Polls</string>
    <string name="post_em">Post Em</string>
    <string name="roster">Roster</string>
    <string name="search">Search</string>
    <string name="section_info">Section Info</string>
    <string name="sign_up">Sign-up</string>
    <string name="site_info">Site Info</string>
    <string name="statistics">Statistics</string>
    <string name="syllabus">Syllabus</string>
    <string name="test_quizzes">Test &amp; Quizzes</string>
    <string name="wiki">Wiki</string>
    <string name="web_content">Web Content</string>
    <string name="user_id">User Id</string>
    <string name="first_name">First Name (optional)</string>
    <string name="last_name">Last Name (optional)</string>
    <string name="sign_up_email">Email (optional)</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_account_type">type: registered</string>
    <string name="create_account">Create Account</string>
    <string name="general">General</string>
    <string name="notification_sounds">Notification &amp; sounds</string>
    <string name="active">Active</string>
    <string name="vibrate">Vibrate</string>
    <string name="light">Light</string>
    <string name="sound">Sound</string>
    <string name="notification_sound">Notification Sound</string>
</resources>