<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sakaiproject.sakai.SignupFragment">

    <ScrollView
        android:id="@+id/sign_up_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/signup_edittexts_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_user_id"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_id_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/user_id"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_user_id"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/first_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_first_name"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/last_name_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_last_name"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:hint="@string/sign_up_email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/confirm_password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/type_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_layout_confirm_password"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:hint="@string/new_account_type" />

            </RelativeLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_anchor="@id/sign_up_scrollview"
                app:layout_anchorGravity="bottom"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#f5f5f5"
                app:mrl_rippleDelayClick="false"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="true">


                <RelativeLayout
                    android:id="@+id/signup_button"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@drawable/signup_button_disabled"
                    android:clickable="false"
                    android:text="@string/login"
                    android:textColor="#FFF">

                    <TextView
                        android:id="@+id/sign_up_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/create_account"
                        android:textColor="#FFF"
                        android:textSize="18sp" />

                    <ProgressBar
                        android:id="@+id/signup_progess"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />

                </RelativeLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
