<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="org.sakaiproject.sakai.WelcomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/motd_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/motd_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/message_of_the_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/message_of_the_day"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <org.sakaiproject.customviews.rich_textview.RichTextView
                        android:id="@+id/motd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/message_of_the_day"
                        android:layout_marginTop="10dp"
                        android:text="@string/motd"/>

                    <ImageView
                        android:id="@+id/message_of_the_day_image"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_below="@+id/motd"
                        android:layout_marginTop="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/comalat_motd" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/welcome_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/motd_cardview"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="16dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/welcome_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/welcome_title"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/welcome_to_sakai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/welcome_title"
                        android:layout_marginTop="10dp"
                        android:text="@string/welcome_to_sakai"
                        android:textSize="18sp" />

                    <org.sakaiproject.customviews.rich_textview.RichTextView
                        android:id="@+id/welcome_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/welcome_to_sakai"
                        android:layout_marginTop="10dp"
                        android:text="@string/welcome_message" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>
</FrameLayout>
